# rsomics-greedy-color

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: coloring.rs
src/: lib.rs  main.rs
tests/: compat.rs
tests/golden/: random200_edges.txt  random50_edges.txt  selfloop_edges.txt
