[package]
name = "rsomics-greedy-color"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "Greedy graph coloring: value-exact port of networkx.greedy_color"
license = "MIT OR Apache-2.0"
keywords = ["bioinformatics", "graph", "coloring", "genomics"]
categories = ["command-line-utilities", "science"]
repository = "https://github.com/omics-rust/rsomics-greedy-color"

[[bin]]
name = "rsomics-greedy-color"
path = "src/main.rs"

[lib]
name = "rsomics_greedy_color"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "coloring"
harness = false
